# upnp-client

./: AUTHORS  CMakeLists.txt  Makefile  README.md  client_system.txt  filename_device.txt  tizen_device.c
client/: CMakeLists.txt  Makefile  client  client_main.cpp  client_system.txt  sample_util.cpp  sample_util.h  tizen_device.cpp  tizen_device.h
packaging/: upnp-client.service  upnp-client.spec  upnp-framework.service  upnp-framework.spec
upnp/lib/: libixml.la  libupnp.la
upnp/lib/arm/: libthreadutil.la
upnp/lib/temp/: libixml.so.2.0.8  libupnp.so.6
upnp/lib/x86/: libixml.so.2.0.8  libthreadutil.la  libthreadutil.so.6.0.4  libupnp.la  libupnp.lai  libupnp.so.6.3.3
upnp/lib/x86/pkgconfig/: libupnp.pc
web/: tizendesc.xml  tizendevicepres.html  tizenpictureSCPD.xml
web/tmp/: tizendesc.xml  tizendevicepres.html
